[package]
name = "rustmetrics"
version = "0.1.0"
edition = "2021"
authors = ["Junbeom Lee <junbeoml22@gmail.com>"]
description = "A pricing and risk engine for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JunbeomL22/flashlog"

[lib]
name = "rustmetrics"
path = "src/lib.rs"

[dependencies]
#regex = "1.10" 
#ndarray-linalg = { version = "0.16", features = ["openblas"] } 
anyhow = "1.0" 
thiserror = "1.0"
time = { version = "0.3", features = ["macros", "serde", "formatting", "parsing"] }
korean-lunar-calendar = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
criterion = "0.5"
num-traits = "0.2"
assert_approx_eq = "1.1"
ndarray = { version = "0.16", features = ["serde"] } 
rustc-hash = "2.0"
lazy_static = "1.4"
rand = "0.8" 
rand_distr = "0.4" 
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0" 
argmin = "0.10"
enum_dispatch = "0.3"
statrs = "0.17"
flashlog = "0.1"
rayon = "1.10"
once_cell = "1.19"
static-id = "0.1"
regex = "1.10"
