[package]
name = "examples-tutorial"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
korean-lunar-calendar = { version = "1.0.0"}
time = { version = "0.3", features = ["macros"]}
rustmetrics = { version = "0.1", path = "../" }
env_logger = { version = "0.11"}
criterion = { version = "0.5"}
plotters = "0.3.5"
ndarray = "0.15"
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0" 
anyhow = "1.0"
flashlog = "0.1"
